--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
         with:
           tag_name: ${{ steps.get_version.outputs.version }}
-          release_name: OtyacraftEngine - ${{ steps.get_version.outputs.version }}
+          release_name: Octave-MG - ${{ steps.get_version.outputs.version }}
           body: |
             The New Release!
             Build by ${{ github.actor }}
